# service-crm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  babel.cfg  commands.md  docker-compose.yml  obsidian-brain.md  pyproject.toml  python.tests.md  roadmap.html  service-app-context-pack.md  service-domain.md  tasks.md  ui-reference.md
.claude/skills/: README.md
.claude/skills/architecture-audit/: SKILL.md
.claude/skills/consistency-pass/: SKILL.md
.claude/skills/data-model/: SKILL.md
.claude/skills/module-slice/: SKILL.md
.claude/skills/ui-foundation/: SKILL.md
.github/: RELEASING.md  pull_request_template.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml
docs/: architecture-plan.md  blueprint.md  commands.md  ease-of-use-audit.md  service-domain.md  testing-cadence.md  ui-reference.md  v0.5-plan.md  v0.6-plan.md  v0.7-plan.md  v0.8-plan.md  v0.9-plan.md  v1-implementation-goals.md
docs/adr/: 0001-flask-vs-fastapi.md
migrations/: README  alembic.ini  env.py
migrations/versions/: 20260511_0628_40b50949771c_initial_users_roles_audit_event.py  20260511_1300_8f3a2c1d4e5b_clients_contacts_locations_contracts.py  20260511_1500_b9c8d2e7a4f6_equipment_installed_base.py  20260511_1640_4c72e1a9b831_equipment_tables.py  20260512_1200_c3a4d7e8f1b9_tickets_spine.py  20260513_0900_d5e9f1a2b3c4_interventions_parts_knowledge.py  20260513_1800_e6f1a2b3c4d5_maintenance_planning.py
service_crm/: __init__.py  cli.py  config.py  dev.py  errors.py  extensions.py  health.py  i18n.py
service_crm/auth/: __init__.py  forms.py  models.py  routes.py  services.py
service_crm/clients/: __init__.py  forms.py  models.py  routes.py  services.py
service_crm/dashboard/: __init__.py  _translations.py  routes.py  services.py
service_crm/equipment/: __init__.py  forms.py  models.py  routes.py  services.py
service_crm/knowledge/: __init__.py  _translations.py  forms.py  markdown.py  models.py  routes.py  services.py
service_crm/locale/: messages.pot
service_crm/locale/en/LC_MESSAGES/: messages.mo  messages.po
service_crm/locale/ro/LC_MESSAGES/: messages.mo  messages.po
service_crm/maintenance/: __init__.py  _translations.py  forms.py  models.py  routes.py  services.py
service_crm/planning/: __init__.py  _translations.py  forms.py  models.py  routes.py  services.py
service_crm/reports/: __init__.py  _translations.py  csv.py  routes.py  services.py
service_crm/shared/: __init__.py  audit.py  clock.py  date_window.py  idempotency.py  scheduler.py  ulid.py  uploads.py
service_crm/static/: manifest.webmanifest  service-worker.js
service_crm/static/css/: style.css
service_crm/static/js/: app.js
service_crm/templates/: base.html
service_crm/templates/auth/: login.html
service_crm/templates/clients/: detail.html  edit.html  import.html  list.html
service_crm/templates/dashboard/: admin.html  me.html
service_crm/templates/dev/: macro_smoke.html
service_crm/templates/equipment/: controllers_list.html  detail.html  edit.html  import.html  list.html  models_list.html
service_crm/templates/knowledge/: procedure_detail.html  procedure_edit.html  procedures_list.html  tag_edit.html  tags_list.html  template_edit.html  templates_list.html
service_crm/templates/macros/: data_table.html  filter_bar.html  form_shell.html  icons.html  kpi_card.html  modal.html  tabs.html
service_crm/templates/maintenance/: plan_detail.html  plan_edit.html  plans_list.html  task_detail.html  tasks_list.html  template_edit.html  templates_list.html
service_crm/templates/partials/: theme_init.html
service_crm/templates/planning/: capacity.html  technician_detail.html  technician_edit.html  technicians_list.html
service_crm/templates/reports/: _layout.html  index.html  interventions_by_machine.html  maintenance_due_vs_completed.html  parts_used.html  repeat_issues.html  technician_workload.html  tickets_by_status.html
service_crm/templates/tickets/: detail.html  edit.html  intervention_detail.html  intervention_edit.html  list.html  lookup_edit.html  part_edit.html  parts_list.html  priorities_list.html  types_list.html
service_crm/tickets/: __init__.py  _intervention_translations.py  _translations.py  forms.py  intervention_forms.py  intervention_models.py  intervention_routes.py  intervention_services.py  models.py  routes.py  services.py  state.py
tests/: conftest.py  factories.py  test_cli.py  test_config.py  test_factory.py  test_health.py
tests/auth/: test_i18n.py  test_models.py  test_routes.py  test_services.py  test_user_loader.py
tests/clients/: test_models.py  test_routes.py  test_services.py
tests/dashboard/: conftest.py  test_routes.py  test_services.py  test_translations.py
tests/e2e/: test_app_js.py  test_dev_blueprint.py  test_macro_smoke.py  test_touch_targets.py
tests/equipment/: test_models.py  test_routes.py  test_services.py
tests/knowledge/: test_markdown.py  test_models.py  test_routes.py  test_services.py  test_translations.py
tests/maintenance/: conftest.py  test_models.py  test_routes.py  test_services.py  test_translations.py
tests/planning/: conftest.py  test_models.py  test_routes.py  test_services.py  test_translations.py
tests/reports/: conftest.py  test_csv.py  test_routes.py  test_services.py  test_translations.py
tests/shared/: test_audit.py  test_clock.py  test_date_window.py  test_scheduler.py  test_ulid.py
tests/tickets/: test_idempotency.py  test_intervention_models.py  test_intervention_routes.py  test_intervention_services.py  test_intervention_translations.py  test_models.py  test_routes.py  test_services.py  test_state.py  test_translations.py  test_uploads.py
