[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "service-crm"
dynamic = ["version"]
description = "Standalone, self-hostable CRM for service-oriented small businesses."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "service-crm contributors" }]
keywords = ["crm", "service", "workshop", "field-service", "self-hosted"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
# Runtime deps land alongside the first feature that needs them; keeping the
# planning phase lock-file-free is intentional.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "hypothesis>=6",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/vladutzeloo/service-crm"
Issues = "https://github.com/vladutzeloo/service-crm/issues"
Changelog = "https://github.com/vladutzeloo/service-crm/blob/main/CHANGELOG.md"
Roadmap = "https://github.com/vladutzeloo/service-crm/blob/main/ROADMAP.md"

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>[^\\s]+)\\s*$"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "unit: fast, no I/O",
    "integration: hits the database or filesystem",
    "e2e: drives the HTTP layer end-to-end",
    "slow: skipped by default in pre-commit",
]

[tool.coverage.run]
branch = true
source = ["service_crm"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
