[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "service-crm"
dynamic = ["version"]
description = "Standalone, self-hostable Flask CRM for service teams (clients, equipment, tickets, maintenance, knowledge)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "service-crm contributors" }]
keywords = ["crm", "service", "field-service", "flask", "self-hosted"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
# Runtime deps land alongside the first feature that needs them; staying
# unpinned during the planning phase is intentional — see ROADMAP 0.1.0.
dependencies = [
    # web + templating
    "Flask>=3.0",
    "Jinja2>=3.1",
    "Werkzeug>=3.0",
    # data
    "SQLAlchemy>=2.0",
    "Flask-SQLAlchemy>=3.1",
    "alembic>=1.13",
    "Flask-Migrate>=4.0",
    # auth + forms
    "Flask-Login>=0.6",
    "Flask-WTF>=1.2",
    "WTForms>=3.1",
    "email-validator>=2.0",  # used by wtforms.validators.Email
    "argon2-cffi>=23.1",
    # i18n
    "Flask-Babel>=4.0",
    "Babel>=2.15",
    # config
    "python-dotenv>=1.0",
    # background jobs (in-process; RQ + Redis post-1.0)
    "APScheduler>=3.10",
    # image handling for intervention photos
    "Pillow>=10.3",
    # serving
    "gunicorn>=22.0; sys_platform != 'win32'",
    "waitress>=3.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
postgres = [
    # Base psycopg — relies on libpq + openssl from the system / container.
    # `psycopg[binary]` is fine for local hacking on Windows/Mac, but the
    # production install path (Docker image, Linux host) provides the
    # system libraries, so we default to the unbundled package.
    "psycopg>=3.2",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "factory-boy>=3.3",
    "hypothesis>=6",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-WTForms",
    "pre-commit>=3.7",
]

[project.scripts]
# `flask` is the canonical entrypoint; this is reserved for ops scripts that
# need to run without a Flask app context.
service-crm-cli = "service_crm.cli:main"

[project.urls]
Homepage  = "https://github.com/vladutzeloo/service-crm"
Issues    = "https://github.com/vladutzeloo/service-crm/issues"
Changelog = "https://github.com/vladutzeloo/service-crm/blob/main/CHANGELOG.md"
Roadmap   = "https://github.com/vladutzeloo/service-crm/blob/main/ROADMAP.md"
Docs      = "https://github.com/vladutzeloo/service-crm/blob/main/docs/architecture-plan.md"

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>[^\\s]+)\\s*$"

[tool.hatch.build.targets.wheel]
# Will start matching real files in 0.1.0 when service_crm/ lands.
packages = ["service_crm"]
# Compiled message catalogs ship in the wheel; .po files do not.
artifacts = ["service_crm/locale/**/*.mo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]
# PLC0415: lazy imports in factory/CLI are intentional (import cycles).
# PLR0913: service-layer functions take (session, *, …) — keyword-only
#   args make the call site readable; the 5-arg limit is too tight here.
ignore = ["PLC0415", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
# HTTP status codes and other in-test literals don't earn names.
"tests/**/*.py" = ["PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "factory.*",
    "factory_boy.*",
    "flask_babel",
    "flask_babel.*",
    "flask_login",
    "flask_login.*",
    "flask_migrate",
    "flask_migrate.*",
    "flask_wtf",
    "flask_wtf.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# db.session is scoped_session[Session]; services take Session — compatible at
# runtime via the proxy but the static types diverge. Suppress per-call noise;
# the auth blueprint uses the same approach with inline ignores on its 2 sites.
# DateField.data is date | None; the required validator ensures it's non-None
# by the time validate_on_submit() passes, but mypy can't know that.
module = "service_crm.clients.routes"
disable_error_code = ["arg-type"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "unit: fast, no I/O",
    "integration: hits the database or filesystem",
    "e2e: drives the Flask test_client end-to-end",
    "slow: skipped by default in pre-commit",
]

[tool.coverage.run]
branch = true
source = ["service_crm"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
